--- a/spec/examples/asciibib.adoc
+++ b/spec/examples/asciibib.adoc
@@ -1,8 +1,8 @@
 [%bibitem]
 == {blank}
 id:: NISTIR 8011 Vol. 3
-fetched:: 2020-08-14
-title.conten:: Automation Support for Security Control Assessments: Software Asset Management
+fetched:: 2020-08-28
+title.content:: Automation Support for Security Control Assessments: Software Asset Management
 title.language:: en
 title.script:: Latn
 title.format:: text/plain
@@ -20,12 +20,12 @@ date.on:: 2018-12-01
 date::
 date.type:: issued
 date.on:: 2018-12-01
-abstract.conten:: The NISTIR 8011 volumes each focus on an individual information security capability, adding tangible detail to the more general overview given in NISTIR 8011 Volume 1, and providing a template for transition to a detailed, NIST guidance-based automated assessment. This document, Volume 3 of NISTIR 8011, addresses the Software Asset Management (SWAM) information security capability. The focus of the SWAM capability is to manage risk created by unmanaged or unauthorized software on a network. Unmanaged or unauthorized software is a target that attackers can use as a platform from which to attack components on the network.
+abstract.content:: The NISTIR 8011 volumes each focus on an individual information security capability, adding tangible detail to the more general overview given in NISTIR 8011 Volume 1, and providing a template for transition to a detailed, NIST guidance-based automated assessment. This document, Volume 3 of NISTIR 8011, addresses the Software Asset Management (SWAM) information security capability. The focus of the SWAM capability is to manage risk created by unmanaged or unauthorized software on a network. Unmanaged or unauthorized software is a target that attackers can use as a platform from which to attack components on the network.
 abstract.language:: en
 abstract.script:: Latn
 abstract.format:: text/plain
-copyright.owner.name.conten:: National Institute of Standards and Technology
-copyright.owner.abbreviation.conten:: NIST
+copyright.owner.name.content:: National Institute of Standards and Technology
+copyright.owner.abbreviation.content:: NIST
 copyright.owner.url:: www.nist.gov
 copyright.role.type:: publisher
 copyright.from:: 2018
@@ -35,8 +35,8 @@ link.content:: http://nvlpubs.nist.gov/nistpubs/ir/2018/NIST.IR.8011-3.pdf
 link::
 link.type:: obp
 link.content:: https://doi.org/10.6028/NIST.IR.8011-3
-contributor.organization.name.conten:: National Institute of Standards and Technology
-contributor.organization.abbreviation.conten:: NIST
+contributor.organization.name.content:: National Institute of Standards and Technology
+contributor.organization.abbreviation.content:: NIST
 contributor.organization.url:: www.nist.gov
 contributor.role.type:: publisher
 relation::
@@ -51,19 +51,19 @@ relation.bibitem.link.type:: src
 relation.bibitem.link.content:: https://csrc.nist.gov/publications/detail/sp/800-53a/rev-4/final
 relation.bibitem.doctype:: standard
 relation.bibitem.formattedref:: SP 800-53A Rev. 4
-series.formattedref.conten:: NISTIR 8011 Vol. 3 (IPD)
+series.formattedref.content:: NISTIR 8011 Vol. 3 (IPD)
 series.formattedref.language:: en
 series.formattedref.script:: Latn
 series.formattedref.format:: text/plain
 doctype:: standard
 keyword::
-keyword.conten:: actual state
+keyword.content:: actual state
 keyword::
-keyword.conten:: assessment
+keyword.content:: assessment
 keyword::
-keyword.conten:: authorization boundary
+keyword.content:: authorization boundary
 keyword::
-keyword.conten:: automation
+keyword.content:: automation
 commentperiod.from:: 2018-12-17
 commentperiod.to:: 2019-03-15
 commentperiod.extended:: 2019-05-15
