--- a/README.adoc
+++ b/README.adoc
@@ -114,6 +114,28 @@ RelatonNist::NistBibliography.get("SP 800-205 (February 2019) (PD)")
 ...
 ----
 
+=== Get specific revision and addendum
+[source,ruby]
+----
+item = RelatonNist::NistBibliography.get 'SP 800-67 r2'
+[relaton-nist] ("SP 800-67 r2") fetching...
+[relaton-nist] ("SP 800-67 r2") found SP 800-67 Rev. 2
+=> #<RelatonNist::NistBibliographicItem:0x007fd87bbe9460
+...
+
+item.docidentifier.first.id
+=> "SP 800-67 Rev. 2"
+
+RelatonNist::NistBibliography.get 'SP 800-38A/Add'
+[relaton-nist] ("SP 800-38A/Add") fetching...
+[relaton-nist] ("SP 800-38A/Add") found SP 800-38A-Add
+=> #<RelatonNist::NistBibliographicItem:0x007fd88c21d880
+...
+
+item.docidentifier.first.id
+=> "SP 800-38A-Add"
+----
+
 === Create bibliographic item from YAML
 [source,ruby]
 ----
