--- a/README.adoc
+++ b/README.adoc
@@ -117,7 +117,15 @@ RelatonNist::NistBibliography.get("SP 800-205 (February 2019) (PD)")
 ...
 ----
 
-=== Get specific revision and addendum
+=== Get specific part, volume, version, revision, and addendum
+
+Referehces can contain optional parameters `{ptN}{vN}{verN}{rN}{/Add}`:
+- Part is specified as `ptN` (SP 800-57pt1)
+- Volume is specified as `vN` (SP 800-60v1)
+- Version is specified as `verN` (SP 800-45ver2)
+- Revision is specified as `rN` (SP 800-40r3)
+- Addendum is specified as `/Add` (SP 800-38A/Add)
+
 [source,ruby]
 ----
 item = RelatonNist::NistBibliography.get 'SP 800-67r3'
